# BCA_BEST

./: .gitignore
BCA_BEST/: .dockerignore  Algorith.md  Dockerfile  README.md  docker-compose.yml
BCA_BEST/uav-telemetry-analyzer/: Dockerfile  README.md  benchmark_performance.py  docker-compose.yml  imu.csv  out.csv  pos.csv  requirements.txt  res_res.csv  test_pipeline.py
BCA_BEST/uav-telemetry-analyzer-ui/: .gitignore  package-lock.json  package.json
BCA_BEST/uav-telemetry-analyzer-ui/cords-optimizator/: Cargo.toml
BCA_BEST/uav-telemetry-analyzer-ui/cords-optimizator/src/: lib.rs
BCA_BEST/uav-telemetry-analyzer-ui/web/: nuxt.config.ts  package.json
BCA_BEST/uav-telemetry-analyzer-ui/web/app/composables/: usePloty.ts  useTelemetryApi.ts  useWasmOptimizer.ts
BCA_BEST/uav-telemetry-analyzer-ui/web/app/pages/: index.vue
BCA_BEST/uav-telemetry-analyzer-ui/web/scripts/: generate-test-bin.mjs
BCA_BEST/uav-telemetry-analyzer/app/: .gitignore  main.py
BCA_BEST/uav-telemetry-analyzer/app/core/: config.py
BCA_BEST/uav-telemetry-analyzer/app/frontend_dist/: 404.html  index.html
BCA_BEST/uav-telemetry-analyzer/app/frontend_dist/_nuxt/: Bzu7QwMi.js  CpeutEp7.js  DVPdK7Ij.js  DZPl1CdA.js  Da7MR8FD.js  Dai-C1b8.js  (+4 more)
BCA_BEST/uav-telemetry-analyzer/app/models/: telemetry.py
BCA_BEST/uav-telemetry-analyzer/app/services/: ai_engine.py  analytics.py  binary_exporter.py  parser.py
BCA_BEST/uav-telemetry-analyzer/app/utils/: bin_preview.py
BCA_BEST/uav-telemetry-analyzer/data/output/: analysis.json
BCA_BEST/uav-telemetry-analyzer/scripts/: log_to_ui_bin.py
(+4 files in other folders)
